2007-12-10  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c: renamed dfsch_throw to dfsch_error

	* src/wrapper.c (dfsch_make_wrapper_type): support hash method in
	wrapper types

	* src/dfsch.c: removed scheme-like call/ec (idea is to replace it
	with CL-style catch/throw)

	* scm/test.scm ("control flow"): call/ec really seems badly broken.

	* src/control.c (dfsch__control_register): destructuring-bind not
	destrucutring-bind :)

	* src/repl.c (main): rename version -> *dfsch-version*

	* src/control.c (native_form_destructuring_bind): destructuring-bind

	* configure.ac: set default load:*path* correctly 

2007-12-10  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_new_frame_from_hash): function for constructing
	environments from pre-existing hash tables (for with-foo forms)
	(dfsch_destructure): split lamda_extend to user-accessible function

	* src/object.c (native_form_with_slots): with-slots special form

	* src/hash.c (native_form_with_hash): with-hash special form

2007-12-09  Ales Hakl  <ales at hakl dot net>

	* src/repl.c (main): renamed argv to *posix-argv*

	* src/ports.c: current-input/output-port

2007-12-08  Ales Hakl  <ales at hakl dot net>

	* src/number.c (n_hash): better hashing

2007-12-06  Ales Hakl  <ales at hakl dot net>

	* src/hash.c: use new hash method

	* dfsch/dfsch.h: hash method in type descriptor

2007-12-05  Ales Hakl  <ales at hakl dot net>

	* dfsch/strings.h (DFSCH_STRING_ARG_OPT): fix optional string 
	arguments

	* src/hash.c (hash_string): fix infinite loop

2007-12-03  Ales Hakl  <ales at hakl dot net>

	* src/control.c (native_form_let): Fixed let argument parsing

2007-12-02  Ales Hakl  <ales at hakl dot net>

	* configure.ac (USE_READLINE): correct SCM lib dir (in /usr/share)

	* src/dfsch.c (dfsch__get_thread_info): create thread specific data 
	key before using it :)

2007-12-01  Ales Hakl  <ales at hakl dot net>

	* Makefile.am (nobase_include_HEADERS): integrate module loader